--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-error-boundary": "^4.0.10",
     "react-final-form": "^6.5.9",
     "react-router": "^6.14.2",
+    "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.5",
     "usehooks-ts": "^2.9.1"
   },
